updating index.html with skeleton

--- a/index.html
+++ b/index.html
@@ -4,10 +4,56 @@
 	<title>Miguel Sandoval's Portfolio Site</title>
 </head>
 
-
 <body>
+
+
+	<header>
+		<h1>Miguel Sandoval's Portfolio Site</h1>
+		<nav>
+			<ul>
+				<li><a href="#development">Development</a></li>
+				<li><a href="#education">Education</a></li>
+				<li><a href="#technician">Technician</a></li>
+				<li><a href="#cattax">Cat Tax</a></li>
+			</ul>
+		</nav>
+	</header>
+
+
+	<main>
+
+		<section>
+			<h1><a name="development">Development</a></h1>
+			<p>First paragraph.</p>
+			<p>Second paragraph.</p>
+			<p>Third paragraph.</p>
+		</section>
+
+		<section>
+			<h1><a name="education">Education</a></h1>
+			<p>First paragraph.</p>
+			<p>Second paragraph.</p>
+			<p>Third paragraph.</p>
+		</section>
+
+		<section>
+			<h1><a name="technician">Technician</a></h1>
+			<p>First paragraph.</p>
+			<p>Second paragraph.</p>
+			<p>Third paragraph.</p>
+		</section>
+
+		<section>
+			<h1><a name="cattax">Cat Tax</a></h1>
+			<p>First paragraph.</p>
+			<p>Second paragraph.</p>
+			<p>Third paragraph.</p>
+		</section>
+
+	</main>
 
 	
 </body>
+
 </html>
 
